--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,19 @@
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-family: "Brush Script MT", Helvetica, sans-serif;
+    font-size: 4rem;
     margin-top: 20px;
     text-align: center;
 }
 
+.home-recipe-list {
+    border: 1px solid red;
+    font-size: 1.2rem;
+    margin-top: 15px;
+    text-align: center;
+}
+
+.home-recipe-list li {
+    margin-bottom: 10px;
+}
