--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,31 @@
 
 h1 {
     font-family: "Brush Script MT", Helvetica, sans-serif;
-    font-size: 4rem;
+    font-size: 3.8rem;
     margin-top: 20px;
     text-align: center;
 }
 
 .home-recipe-list {
-    border: 1px solid red;
-    font-size: 1.2rem;
+    /* border: 1px solid red; */
+    font-family: "Brush Script MT", Helvetica, sans-serif;
+    font-size: 1.8rem;
     margin-top: 15px;
     text-align: center;
 }
 
 .home-recipe-list li {
     margin-bottom: 10px;
+}
+
+.home-recipe-list a {
+    color: black;
+}
+
+.recipe-img {
+    /* border: 2px solid red; */
+    display: block;
+    margin: 25px auto;
+    height: auto;
+    width: 550px;
 }
